--- a/app/src/main/res/layout/cart_item_row.xml
+++ b/app/src/main/res/layout/cart_item_row.xml
@@ -22,11 +22,11 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/cartRowImageView"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@mipmap/ic_launcher"
-                android:id="@+id/cartRowImageView"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/online_shopping_bag" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
