--- a/app/src/main/res/layout/cart_item_row_simple.xml
+++ b/app/src/main/res/layout/cart_item_row_simple.xml
@@ -6,8 +6,10 @@
     <data>
         <variable
             name="cartModel"
-            type="com.tanvir.training.ecomuserbatch1.models.CartModel" />
+            type="com.example.e_comerce_user.models.CartModel" />
     </data>
+
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -17,18 +19,20 @@
         app:cardCornerRadius="4dp"
         android:elevation="4dp">
 
+
         <RelativeLayout
             android:layout_width="match_parent"
+            android:padding="10dp"
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/cartConfirmRowProductNameTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="@{cartModel.productName}"
-                android:id="@+id/cartConfirmRowProductNameTV"
                 android:layout_marginStart="10dp"
-                tools:text="Product Name"/>
+                android:text="@{cartModel.productName}"
+                android:textColor="@color/black"
+                tools:text="Product Name" />
 
             <TextView
                 android:layout_width="wrap_content"
